content/css/ruote.css
/* @override 
	file:///css/ruote.css
	http://localhost:3000/css/ruote.css
	http://ruote.rubyforge.org/css/ruote.css
*/


/* @group new sticky footer */
	/* http://www.cssstickyfooter.com/ */
	html, body {
		height: 100%;
	}
	#container {
		min-height: 100%;
	}
	#content {
		overflow: auto;
		padding-bottom: 120px;
	}
	#footer {
		position: relative;
		margin-top: -120px;
		height: 119px;
		clear: both;
	}
	/*Opera Fix*/
	body:before {
		content: "";
		height: 100%;
		float: left;
		width: 0;
		margin-top: -32767px;
	}
/* @end */

/* main styles */
body {
	font: 16px/1.6em "Helvetica Neue", Helvetica, Geneva, sans-serif;
	color: #485055;
	margin: 0;
}
a {
	color: #5186c0;
	text-decoration: none;
}
a:hover {
	text-decoration: underline;
}
a:visited {
	color: #565fa7;
}
h1, h2 {
	color: #85939b;
	font-size: 200%;
	margin-bottom: 1em;
	text-transform: capitalize;
	text-shadow:  1px 1px 0 #fff;
}
h3 {
	font-size: 125%;
	line-height: 3em;
}
#container {
	background: #f1f1f1;
	-webkit-box-shadow:  0px 0px 6px rgba(0,0,0,0.25);
	-moz-box-shadow:     0px 0px 6px rgba(0,0,0,0.25);
	box-shadow:          0px 0px 6px rgba(0,0,0,0.25);
}
#header {
	padding: 24px 0;
	border-top: 6px solid #2f0403;
	background: #4776a8;
	-webkit-box-shadow: inset 0px 0px 72px rgba(0,0,0,0.6);
	-moz-box-shadow:    inset 0px 0px 72px rgba(0,0,0,0.6);
	box-shadow:         inset 0px 0px 72px rgba(0,0,0,0.6);
}
#header-center, #content-center, #footer-center {
	width: 880px;
	margin: 0 auto;
}
#header-left, #header-right {
	display: inline-block;
}
#header-right {
	float: right;
}
#header-left a {
	display: inline-block;
	margin-bottom: -3px;
}
#header-subtitle, #logo-version {
	font-size: 11px;
	line-height: 1em;
	color: #fff;
	color: rgba(255,255,255,.66);
	text-shadow:  1px 1px 0 rgba(0,0,0,0.4);
}
#nav, #nav ul, #nav li, #nav a {
	height: 24px;
}
#nav {
	margin-top: 24px;
	margin-right: -9px;
	background: transparent;
}
#nav span {
	display: inline-block;
	margin: 0;
	padding: 0;
	white-space: nowrap;
}
#nav a {
	display: inline-block;
	float: left;
}
#nav a:link, #nav a:visited {
	display: block;
	padding: 0 9px;
	color: #091623;
	text-transform: capitalize;
	font-size: 14px;
	text-shadow:  0px 0px 4px rgba(255,255,255,0.6);
	font-weight: bold;
}
#nav a:hover {
	color: #c2cbd5;
	text-shadow: #6db1fc 0 0 8px;
	text-decoration: none;
}
#nav a.nihongo {
	font-size: 75%;
	line-height: 2.25em;
}
#footer {
	background: #dfe4ec;
	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#dfe4ec), to(#ccd2dd));
	background: -moz-linear-gradient(top, #dfe4ec, #ccd2dd);
	border-top: 1px solid #cacdd6;
}
#footer p {
	display: block;
	padding: 6px 0;
	text-align: center;
	color: #85939b;
	font-size: 12px;
}
#footer a {
	color: #485055;
}
#footer-left {
	float: left;
}
#footer-right {
	float: right;
}
#content {
	padding: 36px 24px;
	padding-bottom: 166px;
	border-top: 1px solid #fffeff;
	background: #f1f1f1;
	background: -webkit-gradient(linear, 0% 0%, 0% 64, from(#d9d9d9), to(#f1f1f1));
	background: -moz-linear-gradient(top, #d9d9d9, #f1f1f1 64px);
}
#content ul {
	padding-left: 16px;
}
#content ul li {
	list-style-type: disc;
}
#content-main {
	width: 664px;
}
#sidebar {
	float: right;
	vertical-align: top;
	width: 200px;
	font-size: .9em;
	margin-top: 48px;
}
#sidebar h3 {
	font-size: 1em;
}
#sidebar ul {
	position:relative;
	padding: 2px;
	background: #e0e0e0;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
}
#sidebar ul:before {
	content: "";
	display: block;
	position: absolute;
	top: -18px;
	left: 12px;
	width: 0;
	height: 0;
	border: 9px solid transparent;
	border-bottom-color: #e0e0e0;
}
#sidebar ul li {
	list-style-type: none;
	line-height: 1em;
}
#sidebar li a {
	display: block;
	color: #7e8c95;
	padding: 4px 6px;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	background: transparent;
}
#sidebar li a:hover {
	color: #d9e4f1;
	text-decoration: none;
	background: #4776a8;
}
#sidebar li.current a {
	color: #5186c0;
}
#sidebar li.current a:hover {
	background: transparent;
}
#sidebar li.current a:before {
	content: "⬅";
	float: right;
}
.syntaxhighlighter, pre {
	width: auto;
	padding: 12px 0;
	background: #fff;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
}
pre {
	padding-top: 1.75em;
	border: 1px solid #abb7c2;
	margin-bottom: 1em;
	line-height: 1em;
}
#content table {
	width: 100%;
	margin-bottom: 1em;
}
#content th,td {
	vertical-align: middle;
	font-size: .85em;
	line-height: 1.25em;
	padding: 3px 6px;
	border: 1px solid #c0c4cd;
}
#content th {
	padding: 6px;
	background: #dfe4ec;
	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#dfe4ec), to(#ccd2dd));
	background: -moz-linear-gradient(top, #dfe4ec, #ccd2dd);
	font-weight: normal;
}
.code_and_fluo td {
	width: 50%;
	padding: 0;
	border: none;
	vertical-align: top;
	overflow: auto;
}
.code_and_fluo .syntaxhighlighter {
	margin: 2px 0 0 0 !important;
	width: 332px !important;
	overflow: auto !important;
	overflow-y: hidden !important;
	-ms-overflow-y: hidden !important;
}
.code_and_fluo img {
	width: 100% !important;
}

/* pre-existing styles */
blockquote {
	color: #666;
}
hr {
	background: #ddd;
	color: #ddd;
}
/*
p.quiet { color: #666; }
.alt    { color: #666; }
*/
p {
	margin-bottom: 1.0em;
}
/*ul {
	list-style: circle inside;
}*/
.right-image {
	float: right;
	margin-right: 0;
}
/*
.home-progress {
  border: 1px solid #ddd;
  padding: 1em 0.5em;
  margin-bottom: 1em;
}
*/
.syntaxhighlighter {
	overflow: hidden !important;
	font-size: 13px !important;
}
.toolbar {
	display: none !important;
}

